WIP on Games. Completed initial Infrastructure Chess WIP

--- a/frontend/dexter/src/assets/i18n/en.json
+++ b/frontend/dexter/src/assets/i18n/en.json
@@ -40,6 +40,7 @@
         "Api": "Api",
         "Insights": "Insights",
         "Settings": "Settings",
+        "Games": "Games",
         "Scanning": "Scanning"
     },
     "Profile": {
